add image, supply links, and emphasis

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,10 +5,11 @@
   </head>
   <body>
     <h1>My first web page</h1>
-    <h2>Written with the guidance of Epicodus</h2>
+    <h2>Written with the guidance of <em>Epicodus</em></h2>
 
-    <p>This isn't our first webpage!</p>
+    <p>This isn't our <strong>first webpage!</strong></p>
     <p>Isn't this nice?</p>
+    <p>Check out <a href="http://www.epicodus.com">Epicodus</a>. It's a great school for learning web programmin!</p>
 
     <p>Here are some things we're going to learn about coding:</p>
     <ul>
@@ -17,5 +18,7 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
+    <p> Here are some lists of <a href="favorite-things.html">favorite things!</a></p>
+    <img src="jon.gif" alt="jon being jon.">
   </body>
 </html>
