add images and links

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -10,11 +10,11 @@
     <h3>People</h3>
     <p>Here are some of my favorite people!</p>
     <ul>
-      <li>Clayton</li>
-      <li>Joe</li>
-      <li>Dad!</li>
-      <li>Kindergarteners</li>
-      <li>First graders!</li>
+      <li>Clayton</li><img src="img/clayton.jpeg" alt = "clayton collins">
+      <li>Joe</li><img src="img/joe.jpeg" alt="joe and michaela">
+      <li>Dad!</li><img src="img/dad.jpeg" alt="cool dad">
+      <li>Kindergarteners</li><img src="img/kindergarten.jpg" alt="sweet mug">
+      <li>First graders!</li><img src="img/first graders.jpeg" alt="boys club">
     </ul>
 
     <h3>Flavors of cats</h3>
